--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "test",
     "git": "git add . && git commit -m",
-    "postgit":  "git push --all"
+    "postgit":  "git push"
   },
   "repository": {
     "type": "git",
