--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sammyp",
+  "name": "sammyrp",
   "version": "1.0.0",
   "description": "scripts for building and cleaning",
   "main": "index.js",
