--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "dependencies": {
     "animejs": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3"
+  },
   "scripts": {
     "test": "test",
     "git": "git add . && git commit -m",
-    "postgit":  "git push"
+    "postgit": "git push",
+    "lint": "eslint --ext .jsx --ext .js ./ && eslint --ext .jsx --ext .js ./src",
+    "doctor": "eslint --fix *.js ./ && eslint --fix *.js ./src"
   },
   "repository": {
     "type": "git",
