added style guide

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Sammy Robens-Paradise
 description: Sammy Robens Paradise, Wiki and Documentation
 theme: just-the-docs
+color_scheme: default
 
 url: https://SammyRobensParadise.github.io
 
