--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: https://SammyRobensParadise.github.io
 
 aux_links:
   Github: https://github.com/SammyRobensParadise
+  Dribbble: https://dribbble.com/sammyrp
   Linkedin: https://www.linkedin.com/in/sammy-robens-paradise/
   Portfolio: https://sammy.world
 
